--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   },
   "homepage": "https://github.com/jilanibashaP/whatsapp-design#readme",
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.682.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   }
 }
