--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/client-sns": "^3.682.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
